<resources>
    <string name="app_name">Macewan Capstones</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Full_Name">Full Name</string>
    <string name="Email">Email Address</string>
    <string name="LogIn">Log In</string>
    <string name="Hello">Hello!</string>
    <string name="Project">Project</string>
    <string name="Creator">Creator</string>
    <string name="Members">Members</string>
    <string name="Description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>/>
    <string name="SignUp">Sign Up</string>
    <string name="SignUpWelcome">Create a Capstone account</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="Personal_Info">Personal Information</string>
    <string name="Phone_Number">Phone</string>
    <string name="User_Photo">User Photo</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_information">Account Information</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_management">Account Management</string>
    <string name="disable_account">Disable Account</string>
    <string name="availability">Availability</string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>

</resources>